--- a/views/agregar_guia.ejs
+++ b/views/agregar_guia.ejs
@@ -22,7 +22,7 @@
                           <div class="primary-color waves-effect waves-light btn-floating halfway-fab button-upload" onclick="filebutton.click()"><i class="material-icons">edit</i></div>
                           <input class="file-upload" id="filebutton" type="file" name="url_imagen" style="display:none">
                         </div>
-                      </div>
+                    </div>
                 </div>
                 <div class="col s9">
                     <div class="row">
@@ -34,7 +34,7 @@
                         <div class="col s6">
                             <h5>Icono</h5>
                             <!-- <label for="icono_limitacion">Icono de la Limitación</label> -->
-                            <input id="icono_limitacion" type="file" class="customFile" accept="image/png, image/jpg, image/jpeg" name="icono">
+                            <!-- <input id="icono_limitacion" type="file" class="customFile" accept="image/png, image/jpg, image/jpeg" name="icono"> -->
                         </div>
                     </div>
                     <div class="row valign-wrapper" style="margin-bottom: 0px;">
@@ -64,15 +64,11 @@
                         <input type="submit" class="blue-gradient-btn btn-large hoverable"
                             style="color: white; width: 70%;" value="Agregar Guía">
                     </div>
-                </form>
-
-
+                </div>
             </div>
+        </form>
     </div>
+</div>
 
-<<<<<<< HEAD
 <script src="/js/script_nuevo_museo.js"></script>
 <%- include('includes/footer.ejs') %>
-=======
-    <%- include('includes/footer.ejs') %>
->>>>>>> 1a31935882494f4620126f446ac146ae13f7c56d
