--- a/views/links.ejs
+++ b/views/links.ejs
@@ -42,20 +42,19 @@
                                     </a>
                                 </div>
                                 <div class="col s6">
-                                    col4.2
+                                    
                                 </div>
                                 <div class="col s3">
-                                    col4.3
+                                    
                                 </div>
                             </div>
 
                 </div>
                 <% } else { %>
-                    <h1 class="white-text"> NO HAY LINKS AGREGADOS</h1>
+                    <h1 class="white-text"> No hay links agregados </h1>
                     <div class="col s3">
-                        <a class="grey-gradient-btn btn-large hoverable" href="/links/agregarLink"
-                            style="width: fit-content; border-radius: 9px; text-align: center;">
-                            <i class="material-icons">add</i>
+                        <a class="blue-gradient-btn btn-large hoverable" href="/links/agregarLink" style="width: fit-content; border-radius: 9px; text-align: center;">
+                            <i class="material-icons left">add</i>
                             Agregar
                         </a>
                     </div>
