--- a/views/agregar_guia.ejs
+++ b/views/agregar_guia.ejs
@@ -18,7 +18,7 @@
                         <div class="col s3 center">
                             <div class="card" style="border-radius: 20px;">
                                 <div class="card-image">
-                                    <img src="../assets/img/image_placeholder.jpg" style="border-radius: 20px;">
+                                    <img src="/img/no-img.jpg" style="border-radius: 20px;">
                                     <div class="file-field input-field">
                                         <a type="file"
                                             class="btn-floating halfway-fab waves-effect waves-light blue-gradient-btn">
