--- a/views/principal.ejs
+++ b/views/principal.ejs
@@ -55,7 +55,7 @@
         </div>
       </div>
         <div class="col s10 blue-gradient eventos-card">
-          <h3 class="white-text"> Eventos de la secretaría de cultura</h3>
+          <h3 style="margin-left: 50px" class="white-text"> Eventos de la secretaría de cultura</h3>
         </div>
       
       <div class="container-pers">
