Adds description that someone deleted

--- a/views/agregar_guia.ejs
+++ b/views/agregar_guia.ejs
@@ -37,6 +37,12 @@
                             <!-- <input id="icono_limitacion" type="file" class="customFile" accept="image/png, image/jpg, image/jpeg" name="icono"> -->
                         </div>
                     </div>
+                    <div class="row">
+                        <div class="col s12">
+                            <h5>Descripción</h5>
+                            <textarea placeholder="Descripcion de Limitacion..." id="textarea2" class="materialize-textarea" data-length="120" name="descripcion" style="height: 46px;"></textarea>
+                        </div>
+                    </div>
                     <div class="row valign-wrapper" style="margin-bottom: 0px;">
                         <div class="col s1" style="margin-top: 0px;"></div>
                         <div class="col s10" style="margin-top: 0px; margin-bottom: 1em;">
