--- a/views/agregar_guia.ejs
+++ b/views/agregar_guia.ejs
@@ -46,8 +46,8 @@
                             </div>
                             <div class="row">
                                 <div class="col s12">
-                                    <h5>Descripcion</h5>
-                                    <textarea placeholder="Descripcion de Limitacion..." id="textarea2"
+                                    <h5>Descripción</h5>
+                                    <textarea placeholder="Descripción de Limitación..." id="textarea2"
                                         class="materialize-textarea" data-length="120" name="descripcion"></textarea>
                                     <!-- <label for="textarea2">Descripcion</label> -->
                                 </div>
@@ -67,12 +67,12 @@
                     <div class="row valign-wrapper">
                         <div class="col s1" style="margin-top: 0px;"></div>
                         <div class="col s3" style="margin: auto 0;">
-                            <h5 class="center">Optional Video</h5>
+                            <h5 class="center">Id del Video de YouTube</h5>
                         </div>
                         <div class="col s7" style="margin: auto 0;">
                             <div class="left">
                                 <!-- <input id="icono_limitacion" type="file" accept="image/png, image/jpg, image/jpeg, Video/mp4" class="customFileVideo"> -->
-                                <input type="text" placeholder="Link del Video..." name="video">
+                                <input type="text" placeholder="Id del Video..." name="video">
                             </div>
                         </div>
                         <div class="col s1" style="margin-top: 0px;"></div>
