Adds required on inputs

--- a/views/agregar_guia.ejs
+++ b/views/agregar_guia.ejs
@@ -35,7 +35,7 @@
                                     <h5>Nombre de la Limitación</h5>
                                     <!-- <label for="nombre_limitacion">Nombre de la Limitacion</label> -->
                                     <input id="nombre_limitacion" placeholder="Ejemplo: Limitaciones Visuales"
-                                        type="text" name="nombre">
+                                        type="text" name="nombre" required>
                                 </div>
                                 <div class="col s6">
                                     <h5>Icono</h5>
@@ -48,7 +48,7 @@
                                 <div class="col s12">
                                     <h5>Descripción</h5>
                                     <textarea placeholder="Descripción de Limitación..." id="textarea2"
-                                        class="materialize-textarea" data-length="120" name="descripcion"></textarea>
+                                        class="materialize-textarea" data-length="120" name="descripcion" required></textarea>
                                     <!-- <label for="textarea2">Descripcion</label> -->
                                 </div>
                             </div>
@@ -59,7 +59,7 @@
                         <div class="col s10" style="margin-top: 0px; margin-bottom: 1em;">
                             <h5>TIPS</h5>
                             <textarea placeholder="Escribe Tips..." id="textarea2" class="materialize-textarea"
-                                data-length="200" name="tip"></textarea>
+                                data-length="200" name="tip" required></textarea>
                             <!-- <label for="textarea2">Descripcion</label> -->
                         </div>
                         <div class="col s1" style="margin-top: 0px;"></div>
@@ -72,7 +72,7 @@
                         <div class="col s7" style="margin: auto 0;">
                             <div class="left">
                                 <!-- <input id="icono_limitacion" type="file" accept="image/png, image/jpg, image/jpeg, Video/mp4" class="customFileVideo"> -->
-                                <input type="text" placeholder="Id del Video..." name="video">
+                                <input type="text" placeholder="Id del Video..." name="video" required>
                             </div>
                         </div>
                         <div class="col s1" style="margin-top: 0px;"></div>
