--- a/views/links.ejs
+++ b/views/links.ejs
@@ -35,8 +35,8 @@
             <% } %>
             <div class="row center valign-wrapper">
                 <div class="col s3">
-                    <a class="blue-gradient-btn btn-large hoverable" href="/links/agregarLink"
-                        style="width: fit-content; border-radius: 9px; text-align: center;">
+                    <a class="blue-gradient-btn btn-large hoverable" href="/links/agregarLink">
+                        <i class="material-icons left">add</i>
                         Agregar
                     </a>
                 </div>
