wizard with img upload works

--- a/views/principal.ejs
+++ b/views/principal.ejs
@@ -23,7 +23,7 @@
               <%if(museo.status==1){%>
                 <li class="card-pers card-panel z-depth-3 border-radius-6 mt-10 card-animation-1">
                   <a class="margin-0 center-align">
-                    <img class="imgr border-radius-8 z-depth-4 image-n-margin" src="/uploads/<%=museo.imgP_museo%>">
+                    <img class="imgr border-radius-8 z-depth-4 image-n-margin" src="/uploads/museos/<%=museo.imgP_museo%>">
                   </a>
                   <h6 class="primary-color-txt text-darken-3 mt-5"><b>
                       <%=museo.nom_museo%>
